@@ -136,7 +136,7 @@
         </dependency>
 
         <dependency>
-            <groupId>no.finn.unleash</groupId>
+            <groupId>io.getunleash</groupId>
             <artifactId>unleash-client-java</artifactId>
             <optional>true</optional>
         </dependency>
