@@ -35,26 +35,26 @@
     <github.global.server>github</github.global.server>
 
     <!-- spring versions -->
-    <spring-boot.version>2.5.5</spring-boot.version>
-    <spring-cloud.version>2020.0.4</spring-cloud.version>
+    <spring-boot.version>2.6.3</spring-boot.version>
+    <spring-cloud.version>2021.0.0</spring-cloud.version>
 
     <!-- dependency versions -->
-    <unleash.version>4.4.0</unleash.version>
+    <unleash.version>5.0.3</unleash.version>
 
     <!-- plugin versions-->
     <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
     <git-commit-id-plugin.version>4.0.5</git-commit-id-plugin.version>
-    <asciidoctor-maven-plugin.version>2.2.0</asciidoctor-maven-plugin.version>
+    <asciidoctor-maven-plugin.version>2.2.1</asciidoctor-maven-plugin.version>
     <asciidoctor-extensions-spring-boot>0.6.0</asciidoctor-extensions-spring-boot>
-    <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
+    <maven-deploy-plugin.version>3.0.0-M2</maven-deploy-plugin.version>
     <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-    <maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
     <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-    <flatten-maven-plugin.version>1.2.2</flatten-maven-plugin.version>
-    <spotless.plugin.version>2.12.1</spotless.plugin.version>
+    <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
+    <spotless.plugin.version>2.20.0</spotless.plugin.version>
     <google-java-format.version>1.7</google-java-format.version>
   </properties>
 
